Fixed some overflow issues and position footer at bottom

--- a/Containers/RegisterContainer/index.css
+++ b/Containers/RegisterContainer/index.css
@@ -2,11 +2,10 @@
   max-width: 640px;
   display: flex;
   flex-flow: column nowrap;
-  width: 100%;
+  width: auto;
   justify-content: center;
   background: #fff;
-  margin: 20px auto;
-  padding: 10px;
+  margin: 20px auto 145px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
 }
 .title {
