--- a/components/TextInput/index.css
+++ b/components/TextInput/index.css
@@ -1,6 +1,7 @@
 .input {
   border: 1px solid rgba(0, 0, 0, 0.25);
   height: 35px;
+  width: 100%;
   font-size: 25px;
   padding: 0 5px;
 }
