--- a/pages/profile/index.css
+++ b/pages/profile/index.css
@@ -18,10 +18,10 @@
 }
 .profile {
   display: flex;
-  width: 100vw;
+  width: 100%;
   height: 100%;
   justify-content: center;
-  margin-bottom: 40px;
+  padding-bottom: 240px;
 }
 .profile--nav {
   display: flex;
