--- a/pages/profile/register/index.css
+++ b/pages/profile/register/index.css
@@ -1,5 +1,3 @@
 .content {
-  margin: 10px;
-  width: auto;
   padding-bottom: 145px;
 }
